Fix naming of MyPaint brushes on versioned serialization

Before this commit, versioned .myb files would apply the .kpp suffix,
only to be overridden by the save preset dialog.

CCBUG: 439817
BUG: 445281
BUG: 445282