plugins/paintops/mypaint/MyPaintPaintOpPreset.h
@@ -38,11 +38,6 @@ public:
         return QPair<QString, QString>(ResourceType::PaintOpPresets, ResourceSubType::MyPaintPaintOpPresets);
     }
 
-    QString defaultFileExtension() const override
-    {
-        return ".myb";
-    }
-
     void updateThumbnail() override;
     QString thumbnailPath() const override;
 
@@ -54,10 +49,8 @@ public:
     float isEraser();
 
 private:
-
     class Private;
     Private* const d;
-    bool firstLoad = true;
 };
 
 #endif // KIS_MYPAINT_BRUSH_H
